<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".singin_activity">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/itsm" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <!-- Login Button -->
        <Button
            android:id="@+id/ah_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@android:color/black" />

        <TextView
            android:gravity="center"
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@null"
            android:text="@string/create_a_new_account"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Cerrar"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>